--- a/_includes/views/banner.html
+++ b/_includes/views/banner.html
@@ -1,4 +1,4 @@
-{%- include functions.html func='log' level='debug' msg='Get banner_html value' -%}
+<!-- {%- include functions.html func='log' level='debug' msg='Get banner_html value' -%}
 {% assign name = 'banner_html' %}
 {%- include functions.html func='get_value' -%}
 {% assign banner_html = return %}
@@ -128,4 +128,4 @@
     </div>
   </section>
 {%- endif -%}
-
+ -->
