--- a/_sass/yat/_dark.scss
+++ b/_sass/yat/_dark.scss
@@ -141,6 +141,7 @@ html[data-theme="dark"]  {
       hr {
         background-color: #555;
       }
+      font-size: 18px;
     }
 
     .post-related {
