--- a/_includes/views/header.html
+++ b/_includes/views/header.html
@@ -32,7 +32,7 @@
             </span>
           </label>
 
-          <div class="trigger">
+          <!-- <div class="trigger">
             {%- for path in page_paths -%}
               {%- assign my_page = site.pages | where: "path", path | first -%}
               {%- if my_page.title -%}
@@ -51,7 +51,7 @@
                   {%- include extensions/google-translate.html -%}
               </span>
             {%- endif -%}
-          </div>
+          </div> -->
         </nav>
       {%- endif -%}
     </div>
