--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: framework
 banner:
 banner_html: post-header.html
 hidden: []
-sidebar:
-  - article-menu
+sidebar: []
+next: []
 ---
 
 <div class="post">
@@ -45,7 +45,7 @@ sidebar:
 
     {%- assign result = hidden | where_exp: "item", "item == 'related_posts'" -%}
     {%- if result.size == 0 -%}
-    <div class="post-related">
+    <!-- <div class="post-related">
       <div>Related Articles</div>
       <ul>
         {% assign posts = site[page.collection] | sample:4 %}
@@ -64,7 +64,7 @@ sidebar:
         </li>
         {%- endfor -%}
       </ul>
-    </div>
+    </div> -->
     {%- endif -%}
 
     {%- assign result = hidden | where_exp: "item", "item == 'comments'" -%}
