--- a/_includes/views/footer.html
+++ b/_includes/views/footer.html
@@ -11,7 +11,7 @@
             | replace: '(p)', '℗'
             | replace: '(cleft)', '<span class="copyleft">&copy;</span>'
         -%}
-      <div>{{ copyright }}</div>
+      <div><a href="mailto:{{ copyright }}">{{ copyright }}</a></div>
     </div>
   </div>
 </footer>
