--- a/_sass/yat/_layout.scss
+++ b/_sass/yat/_layout.scss
@@ -14,6 +14,7 @@ html {
       margin-top: 12px;
       background-color: transparent;
       transition: 0.1s height,background-color,box-shadow;
+      width: 50%;
 
       &.site-header {
         .site-brand-inner, .page-link {
